--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <section class="center-wrapper">
+      <my-app>Loading...</my-app>
+    </section>
   </body>
 </html>
