Gets rid of dynamically added images
Was having problems unescaping image tags, so just dropped down to one image per controller.

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -17,7 +17,8 @@
       <material-icon icon="add"></material-icon>
   </material-fab>
   <br>
-  {{alpaca_pics}}
+  <img src='/assets/images/alpaca.png' width='50%'>
+  <!-- {{alpaca_pics}} -->
 </section>
 
 <!-- <br />
@@ -36,7 +37,8 @@
       <material-icon icon="add"></material-icon>
   </material-fab>
   <br>
-  {{hamster_pics}}
+  <img src='/assets/images/hamster.png' width='50%'>
+  <!-- {{hamster_pics}} -->
 </section>
 
 <!-- <br />
@@ -55,7 +57,8 @@
       <material-icon icon="add"></material-icon>
   </material-fab>
   <br>
-  {{hedgehog_pics}}
+  <img src='/assets/images/hedgehog.png' width='50%'>
+  <!-- {{hedgehog_pics}} -->
 </section>
 
 <!-- <br />
@@ -74,6 +77,7 @@
       <material-icon icon="add"></material-icon>
   </material-fab>
   <br>
-  {{count_pics}}
+  <img src='/assets/images/alpaca.png' width='50%'>
+  <!-- {{count_pics}} -->
 </section>
 <!-- </body> -->
